--- a/package.json
+++ b/package.json
@@ -11,12 +11,30 @@
   },
   "dependencies": {
     "@nuxt/eslint": "^1.9.0",
+    "@nuxt/fonts": "^0.11.4",
+    "@nuxt/icon": "^2.0.0",
     "@nuxt/image": "^1.11.0",
     "@nuxt/ui": "^4.0.1",
+    "@tailwindcss/vite": "^4.1.14",
+    "@vueuse/core": "^13.9.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "eslint": "^9.37.0",
+    "lucide-vue-next": "^0.546.0",
     "nuxt": "^4.1.3",
+    "reka-ui": "^2.5.1",
+    "shadcn-nuxt": "^2.3.2",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.14",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3",
+    "v-gsap-nuxt": "^1.4.4",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "@iconify-json/radix-icons": "^1.2.5",
+    "@nuxtjs/color-mode": "^3.5.2",
+    "prettier": "^3.6.2"
   }
 }
